[package]
name = "case"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rust_decimal = "1.15"
rust_decimal_macros = "1.15"
serde = { version = "1", features = ["derive"] }
csv = "1.1.6"
rand = "0.8.4"
tokio = { version = "1", features = ["full"] }
warp = "0.3"
hyper = { version = "0.14", features = ["full"] }
futures = "0.3.16"
chrono = "0.4.19"