[package]
name = "case"
version = "0.1.0"
edition = "2018"

default-run = "serve"

# Dafualt optimization, to be fast when u guys run `cargo run -- ...` in debug mode by default
[profile.dev]
opt-level = 3
debug = false
split-debuginfo = '...'  # Platform-specific.
debug-assertions = false
overflow-checks = false
lto = false
panic = 'unwind'
incremental = false
codegen-units = 16
rpath = false

[profile.release]
opt-level = 3

[dependencies]
rust_decimal = "1.15"
rust_decimal_macros = "1.15"
serde = { version = "1", features = ["derive"] }
csv = "1.1.6"
rand = "0.8.4"
tokio = { version = "1", features = ["full"] }
warp = "0.3"
hyper = { version = "0.14", features = ["full"] }
futures = "0.3.16"
chrono = "0.4.19"
clap = "2.33.3"


